# AnimeRecommender

./: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/core/: startup.py
backend/app/models/: schemas.py
backend/app/routes/: health_router.py  recommend_router.py  vector_router.py
backend/app/services/: recommender_service.py  vector_service.py
backend/config/: settings.py
backend/data/: anime_raw.csv
backend/dataio/: data_loader.py
backend/pipeline/: main.py
backend/recommender/: anime_recommender.py
backend/tools/: retrieval_tools.py
backend/utils/: logger.py
frontend/: pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AnimeCard.tsx  SearchBar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: anime.ts
proejct_requirements/: day1.md
src/dataio/: data_loader.py
src/rag/: vector_store.py
